--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,13 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/contracts": "^8.0"
+        "ext-json": "*",
+        "illuminate/contracts": "^8.0",
+        "illuminate/support": "^8.0"
+    },
+    "require-dev": {
+        "fakerphp/faker": "^1.9.1",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
