--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,10 @@
               "Marcth\\GocDeploy\\GocDeployServiceProvider"
             ]
         }
-    }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
